--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
