--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.536.0",
-    "next": "15.4.5",
+    "next": "^15.4.8",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
@@ -26,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.5",
+    "eslint-config-next": "^15.4.8",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
